<resources>
    <string name="app_name">FundatecHeroTI22</string>
    <string name="button_2">Botão 2</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="login_error">Erro ao fazer login! Tente novamente mais tarde!!!</string>
    <string name="create_user">Criar usuário</string>
    <string name="new_here">Novo por aqui?</string>
    <string name="email_error">Digite um e-mail válido</string>
    <string name="password_error">Digite uma senha válida</string>
    <string name="nomeHerois">Qual é o nome do seu Herói ou Vilão?</string>
    <string name="nomePersonagem">Qual é o nome do seu Herói ou Vilão?</string>
    <string name="descricao">Descreva o seu personagem</string>
    <string name="imagemPersonagem">Insira o link (URL)da imagem do seu personagem</string>
    <string name="idade">Quantos anos o seu personagem tem?</string>
    <string name="anos">Idade</string>
    <string name="dataNasc">Data de Nascimento: %1$s</string>
    <string name="app_criar_personagem">Criar Personagem</string>
    <string name="criar">Criar</string>
    <string name="remover">Remover</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="sucessoPersonagem_removido">Personagem Removido</string>

    <string-array name="universeType">
        <item>Selecione</item>
        <item>Marvel</item>
        <item>DC</item>
    </string-array>
    <string-array name="tipoPersonagem">
        <item>Selecione</item>
        <item>Herói</item>
        <item>Vilão</item>
    </string-array>
</resources>